# rs-commentary

./: Cargo.toml  LICENSE.md  README.md  design.md
src/: lib.rs  main.rs
src/analysis/: composer.rs  engine.rs  layers.rs  mod.rs  oracle.rs  semantic.rs  state.rs  types.rs  visitor.rs
src/analysis/engine/: macros.rs  mod.rs
src/execution/: calls.rs  mod.rs  registry.rs  trace.rs  transfers.rs
src/lsp/: capabilities.rs  handlers.rs  mod.rs  server.rs
src/output/: context.rs  diagnostic.rs  helpers.rs  html.rs  inlay_hints.rs  mod.rs  render.rs  renderer.rs  set_notation.rs  traits.rs  types.rs  valid_rust.rs  validated.rs  vertical_spans.rs
src/output/lsp/: hover.rs  mod.rs
src/output/renderers/: diagnostic.rs  html.rs  mod.rs  set_notation.rs  valid_rust.rs  validated.rs  vertical_spans.rs
src/testing/: error.rs  expectation.rs  matcher.rs  mod.rs
src/util/: ast_visitor.rs  mod.rs  ownership_timeline.rs  position.rs  state.rs  variable.rs
test-fixtures/: Cargo.toml
test-fixtures/drop_test/: Cargo.toml
test-fixtures/drop_test/src/: allergies.rs  for_loop.rs  main.rs
test-fixtures/specs/: Cargo.toml  README.md
test-fixtures/specs/src/: borrow_mut.rs  borrow_shared.rs  copy_types.rs  drop_nll.rs  helpers.rs  iterators.rs  lib.rs  move_semantics.rs
tests/: expectation_tests.rs  fixture_tests.rs
