[package]
name = "rs-commentary"
version = "0.1.3"
edition = "2021"
description = "Rust ownership state visualizer - annotates code with move/borrow/ownership state"
license = "MIT"

[[bin]]
name = "rs-commentary"
path = "src/main.rs"

[lib]
name = "rs_commentary"
path = "src/lib.rs"

[dependencies]
# rust-analyzer crates for analysis
ra_ap_ide = "0.0.266"
ra_ap_syntax = "0.0.266"
ra_ap_hir = "0.0.266"
ra_ap_vfs = "0.0.266"
ra_ap_project_model = "0.0.266"
ra_ap_load-cargo = "0.0.266"

# LSP
lsp-server = "0.7"
lsp-types = "0.97"
crossbeam-channel = "0.5"

# Utilities
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
bpaf = { version = "0.9", features = ["derive"] }
tiny_http = "0.12"
open = "5"

[dev-dependencies]
expect-test = "1"
